# namibia-evaporation-ml

./: .gitignore  LICENSE  PROJECT_CARD.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
data/raw/: north-namibian-monthly-soil.csv
notebooks/: evaporation_analysis_demo.ipynb
src/: __init__.py  data_loader.py  deep_learning.py  eda.py  models.py  preprocessing.py  run.py
tests/: test_data_loader.py  test_models.py  test_preprocessing.py
