[project]
name = "namibia-evaporation-ml"
version = "1.0.0"
description = "ML pipeline predicting soil evaporation rates in Northern Namibia"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "N802",  # function name should be lowercase (sample_Xy fixture)
    "N803",  # argument name should be lowercase (X_train, X_test etc.)
    "N806",  # variable should be lowercase (X, X_train etc.)
    "F401",  # unused imports in try/except blocks
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
